[project]
name = "fine_system_claude_code"
version = "0.1.0a0"
description = "FineCode handler to install the Claude Code CLI"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
requires-python = ">=3.11, < 3.15"
dependencies = ["finecode_extension_api~=0.4.0a0", "fine_system_setup~=0.1.0a0"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[tool.setuptools]
packages = ["fine_system_claude_code"]
