[project]
name = "fine_code_hierarchy"
version = "0.1.0a0"
description = "FineCode cross-language preset that owns the code hierarchy action contracts and their canonical registrations"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["finecode_extension_api~=0.4.0a0", "fine_src_artifacts~=0.1.0a0"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
fine_code_hierarchy = ["preset.toml"]

[tool.setuptools]
packages = ["fine_code_hierarchy"]
