[project]
name = "fine_dist_artifacts"
version = "0.1.0a0"
description = "FineCode preset that owns distribution artifact publishing action contracts"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["finecode_extension_api~=0.4.0a0", "fine_src_artifacts~=0.1.0a0"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
fine_dist_artifacts = ["preset.toml"]

[tool.setuptools]
packages = ["fine_dist_artifacts"]
