[project]
name = "fine_docs"
version = "0.1.0a0"
description = "FineCode preset that owns documentation build and serve action contracts"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["finecode_extension_api~=0.4.0a0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
fine_docs = ["preset.toml"]

[tool.setuptools]
packages = ["fine_docs"]
