[project]
name = "fine_docs_markdown"
version = "0.1.0a0"
description = "FineCode preset for markdown-based documentation (MkDocs)"
authors = [{ name = "Vladyslav Hnatiuk", email = "aders1234@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["finecode_extension_api~=0.4.0a0", "fine_docs~=0.1.0a0"]

[dependency-groups]
dev_workspace = ["finecode~=0.4.0a0", "finecode_dev_common_preset~=0.3.0a0"]

[tool.finecode]
presets = [{ source = "finecode_dev_common_preset" }]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
fine_docs_markdown = ["preset.toml"]

[tool.setuptools]
packages = ["fine_docs_markdown"]
